# hackernews-report

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  TAGS_README.md  WEB_UI_README.md  docker-compose.yml  gui_pdf_merger.py  project.code-workspace  pyproject.toml  pytest.ini  requirements.txt  run.bat  run.ps1  translate_html.py
.agents/skills/etiquetar/: SKILL.md
.agents/skills/link-research/: SKILL.md
.agents/skills/reporte/: SKILL.md
.kiro/specs/hackernews-report/: design.md  requirements.md  tasks.md
.kiro/specs/hackernews-search/: design.md  requirements.md  tasks.md
data/: .gitkeep
docs/: api.md  architecture.md  database.md  deployment.md
mcp-hackernews/: README.md  pyproject.toml  server.py
src/: __init__.py  __main__.py  api_client.py  cli.py  config.py  database.py  favorites.py  migrate_add_tags.py  models.py  personal_posts.py  report_service.py  search_engine.py  search_service.py  service.py  tags.py  web_app.py
src/utils/: pdf_service.py
src/web/: __init__.py  db.py  filters.py  i18n.py  routes.py  services.py
static/: style.css
templates/: 404.html  _model_filters.html  base.html  index.html  personal_posts.html  post_detail.html
tests/: __init__.py  test_api_client.py  test_cli.py  test_database.py  test_integration.py  test_models.py  test_ordering.py  test_score_date_filters.py  test_search_engine.py  test_search_service.py  test_service.py
