[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-hackernews"
version = "0.1.0"
description = "MCP server for the Hackernews Report project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.1",
    "requests>=2.31.0"
]

[project.scripts]
mcp-hn = "server:main"
